SERVER-7181 Fix error reporting in mongorestore during index build