src/mongo/tools/restore.cpp
@@ -480,18 +480,26 @@ private:
         // We're stricter about errors for indexes than for regular data
         BSONObj err = conn().getLastErrorDetailed(_curdb, false, false, _w);
 
-        if ( ! ( err["err"].isNull() ) ) {
-            if (err["err"].String() == "norepl" && _w > 1) {
+        if (err.hasField("err") && !err["err"].isNull()) {
+            if (err["err"].str() == "norepl" && _w > 1) {
                 error() << "Cannot specify write concern for non-replicas" << endl;
             }
             else {
-                error() << "Error creating index " << o["ns"].String();
-                error() << ": " << err["code"].Int() << " " << err["err"].String() << endl;
-                error() << "To resume index restoration, run " << _name << " on file" << _fileName << " manually." << endl;
+                string errCode;
+
+                if (err.hasField("code")) {
+                    errCode = str::stream() << err["code"].numberInt();
+                }
+
+                error() << "Error creating index " << o["ns"].String() << ": "
+                        << errCode << " " << err["err"] << endl;
             }
 
             ::abort();
         }
+
+        massert(16439, str::stream() << "Error calling getLastError: " << err["errmsg"],
+                err["ok"].trueValue());
     }
 };
 
